--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,15 @@
   line-height: 1.2em;
 }
 
+.title {
+  font-family: Arial,Helvetica,"san-serif";
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 2px;
+  color: #262626;
+  line-height: 1.2em;
+}
+
 #extra-space {
   height: 300px;
 }
